[package]
name = "native-vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["optimized"]
native = ["solana-program"] # Not bad, but we can do better
optimized = ["pinocchio", "five8_const", "solana-nostd-sha256"] # Much better!
based = [] # lol dependencies

[dependencies]
solana-nostd-sha256 = { version = "0.1.3", optional = true }
pinocchio = { version = "0.5.0", optional = true }
five8_const = { version = "0.1.3", optional = true }
solana-program = { version = "2.0.14", optional = true }

[dev-dependencies]
mollusk-svm = "0.0.6"
solana-sdk = "2.0.14"